--- a/src/App/Bundle/SiteBundle/Resources/translations/messages.en.yml
+++ b/src/App/Bundle/SiteBundle/Resources/translations/messages.en.yml
@@ -37,3 +37,4 @@ app.skill.passion: Passionate
 app.skill.web: Web Addict
 app.skill.travel: Traveler
 app.skill.sport: Athletic
+app.show_more: Show more
