--- a/src/App/Bundle/SiteBundle/Resources/translations/messages.fr.yml
+++ b/src/App/Bundle/SiteBundle/Resources/translations/messages.fr.yml
@@ -37,3 +37,4 @@ app.contact.title.phone: Téléphone
 app.contact.title.based: Basé à
 app.contact.title.cv: Cv
 app.title.contact: Contact
+app.show_more: Voir plus
