--- a/src/App/Bundle/SiteBundle/Resources/translations/messages.en.yml
+++ b/src/App/Bundle/SiteBundle/Resources/translations/messages.en.yml
@@ -1,5 +1,5 @@
 app.global.title: 'Lucas <span class="red">SIMONIN</span>'
-app.global.meta_title: Lucas SIMONIN - Resume
+app.global.meta_title: Homepage interactive resume | Lucas SIMONIN
 app.global.subtitle: Interactive resume
 app.title.presentation: Profile
 app.title.about: About me
