--- a/src/App/Bundle/SiteBundle/Resources/translations/messages.fr.yml
+++ b/src/App/Bundle/SiteBundle/Resources/translations/messages.fr.yml
@@ -1,5 +1,5 @@
 app.global.title: 'Lucas <span class="red">SIMONIN</span>'
-app.global.meta_title: Lucas SIMONIN - CV
+app.global.meta_title: Acceuil CV intéractif | Lucas SIMONIN
 app.global.subtitle: CV intéractif
 app.title.presentation: Profil
 app.presentation.subtitle: Je suis un développeur PHP créatif
